<resources>
    <string name="app_name">Roman Calculator</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="roman1">I</string>
    <string name="roman5">V</string>
    <string name="roman10">X</string>
    <string name="roman50">L</string>
    <string name="roman100">C</string>
    <string name="roman500">D</string>
    <string name="roman1000">M</string>
    <string name="equalSign">=</string>
    <string name="clearSign">C</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="decimal">Decimal</string>
    <string name="roman">Roman</string>
    <string name="displayScreenHint">ENTER A VALUE</string>
    <string name="invalid_result">INVALID</string>
</resources>
